--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
       <input v-model="message">
       <button v-on:click='seen = !seen'>Open/Close</button>
 
+      <span v-bind:title="message">
+        Hover your mouse over me for a few seconds
+        to see my dynamically bound title!
+      </span>
+
+      <a v-bind:href="message">Link</a>
+
       <span v-if="seen">Now you see me</span>
     </div>
     
